[package]
name = "chat-gpt-gui"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["devtools", "dialog-all", "shell-open", "updater", "window-all"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.16"
ping = "0.4.0"
machine-uid = "0.2.0"
ureq = { version = "*", features = ["json", "charset"] }
pulldown-cmark = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
