[package]
name = "chat-gpt-gui"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["devtools", "dialog-all", "macos-private-api", "shell-open", "updater", "window-all"] }
ping = "0.4.0"
machine-uid = "0.2.0"
window-vibrancy = "0.3.2"
tauri-plugin-aptabase = "0.2"
md5 = "0.7.0"
libloading = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [ "shellscalingapi" ] }
